--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
   "dependencies": {
     "@nestjs/common": "^6.0.0",
     "@nestjs/core": "^6.0.0",
+    "@nestjs/mongoose": "^6.1.2",
     "@nestjs/platform-express": "^6.0.0",
     "faker": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
+    "mongoose": "^5.6.8",
     "mysql2": "^1.6.5",
     "nestjs-redis": "^1.2.0",
     "node-datetime": "^2.1.2",
@@ -44,6 +46,7 @@
     "@nestjs/testing": "^6.0.0",
     "@types/express": "^4.16.0",
     "@types/jest": "^23.3.13",
+    "@types/mongoose": "^5.5.11",
     "@types/node": "^10.14.12",
     "@types/sequelize": "^4.28.3",
     "@types/supertest": "^2.0.7",
