securing data with .env file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,10 +15,8 @@ services:
   postgres:
     image: postgres:9.6
     restart: always
-    environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=qwer1234ty56
-      - POSTGRES_DB=triprun
+    env_file:
+      - .env
     volumes:
       - ./postgres:/var/lib/postgresql/data
     ports:
@@ -32,9 +30,8 @@ services:
   mongo:
     image: mongo:latest
     restart: always
-    environment:
-      MONGO_INITDB_DATABASE: "nest"
-      MONGODB_DATABASE: "nest"
+    env_file:
+      - .env
     volumes:
       - ./mongo:/data/db
     ports:
