--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/mongoose": "^6.1.2",
     "@nestjs/platform-express": "^6.0.0",
     "braces": "^3.0.2",
+    "dotenv": "^8.0.0",
     "faker": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
