minor changes & backend healthcheck injection

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3"
+version: "3.5"
 services:
   redis:
     image: redis:alpine
@@ -27,6 +27,7 @@ services:
       interval: 30s
       timeout: 10s
       retries: 5
+      start_period: 15s
   mongo:
     image: mongo:latest
     restart: always
@@ -39,10 +40,10 @@ services:
   web:
     build: .
     restart: always
-    ports:
-      - "3030:3030"
     volumes:
       - .:/usr/src/app
+    ports:
+      - "3030:3030"
     depends_on:
       - mongo
       - postgres
