--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,7 @@ services:
       - ./mongo:/data/db
     ports:
       - "27017:27017"
-  web:
+  api:
     build: .
     restart: always
     volumes:
