--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/core": "^6.0.0",
     "@nestjs/mongoose": "^6.1.2",
     "@nestjs/platform-express": "^6.0.0",
+    "@nestjs/swagger": "^3.1.0",
     "braces": "^3.0.2",
     "dotenv": "^8.0.0",
     "faker": "^4.1.0",
@@ -43,6 +44,7 @@
     "sequelize-cli": "^5.5.0",
     "sequelize-typescript": "^0.6.11",
     "sharp": "^0.22.1",
+    "swagger-ui-express": "^4.0.7",
     "tedis": "^0.1.7"
   },
   "devDependencies": {
