--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@nestjs/platform-express": "^6.0.0",
     "@nestjs/swagger": "^3.1.0",
     "braces": "^3.0.2",
+    "csurf": "^1.10.0",
     "dotenv": "^8.0.0",
     "faker": "^4.1.0",
+    "helmet": "^3.21.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
