--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "braces": "^3.0.2",
     "csurf": "^1.10.0",
     "dotenv": "^8.0.0",
+    "express": "^4.17.1",
     "faker": "^4.1.0",
     "helmet": "^3.21.0",
     "jsonwebtoken": "^8.5.1",
