--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/platform-express": "^6.0.0",
     "@nestjs/swagger": "^3.1.0",
     "braces": "^3.0.2",
+    "cors": "^2.8.5",
     "csurf": "^1.10.0",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
